[tool.poetry]
name = "flask_tasks"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
flask_sqlalchemy = "^2.4.1"
redis = "^3.4.1"
rq = "^1.3.0"
flask = "^1.1.1"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
